--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
+    <header class="jumbotron">
+        <div class="container col-12 col-sm-6">
+            <div class="row">
                 <div>
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
-                </div>
+                </div class="col col-sm">
                 <div>
                 </div>
             </div>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 col-md-3 flex-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
+            <div class="col-sm col-md flex-first">
                 <h2>Uthappizza</h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
                     ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="row">
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -67,18 +67,18 @@
     </div>
 
     <footer>
-        <div>
-            <div>
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-6 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
                         121, Clear Water Bay Road<br>
@@ -89,7 +89,7 @@
                         Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div>
+                <div class="col-4 offset-1 col-sm-2">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="col-auto">
                 <div>
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
