--- a/aboutusUpdated.html
+++ b/aboutusUpdated.html
@@ -7,7 +7,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/stylesheet.css">
-
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <title>Ristorante Con Fusion: About Us</title>
 
 </head>
@@ -19,7 +20,7 @@
         </button>
 
         <div class="container">
-            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
+            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html">
@@ -39,19 +40,18 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-12">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12 col-sm">
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="container">
+    <div>
         <div>
             <div class="aboutUs">
                 <h3>About Us</h3>
@@ -63,9 +63,8 @@
             </div>
         </div>
 
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-6">
+        <div class="col-sm-8">
+            <div>
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence
                     in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it
@@ -80,9 +79,84 @@
         </div>
 
 
-        <div class="row row-content align-items-center">
+        <div class="cal-sm-6 col-md-12 CLeadership">
             <div class="col-md-12 col-sm-6 ">
                 <h2>Corporate Leadership</h2>
+
+                <div class="row row-content">
+                    <div class="col-12 col-sm-9">
+                        <h2>Facts &amp; Figures</h2>
+                    </div>
+                    <div class="col-12 col-sm-3">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>&nbsp;</th>
+                                        <th>2013</th>
+                                        <th>2014</th>
+                                        <th>2015</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>Employees</th>
+                                        <td>15</td>
+                                        <td>30</td>
+                                        <td>40</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Guests Served</th>
+                                        <td>15000</td>
+                                        <td>45000</td>
+                                        <td>100,000</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Special Events</th>
+                                        <td>3</td>
+                                        <td>20</td>
+                                        <td>45</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Annual Turnover</th>
+                                        <td>$251,325</td>
+                                        <td>$1,250,375</td>
+                                        <td>~$3,000,000</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <div class="card">
+                            <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Started</dt>
+                                    <dd class="col-6">3 Feb. 2013</dd>
+                                    <dt class="col-6">Major Stake Holder</dt>
+                                    <dd class="col-6">HK Fine Foods Inc.</dd>
+                                    <dt class="col-6">Last Year's Turnover</dt>
+                                    <dd class="col-6">$1,250,375</dd>
+                                    <dt class="col-6">Employees</dt>
+                                    <dd class="col-6">40</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="card card-body bg-light">
+                            <blockquote class="blockquote">
+                                <p class="mb-0">You better cut the pizza in four pieces because
+                                    I'm not hungry enough to eat six.</p>
+                                <footer class="blockquote-footer">Yogi Berra,
+                                    <cite title="Source Title">The Wit and Wisdom of Yogi Berra,
+                                        P. Pepe, Diversion Books, 2014</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class=" d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who
                     undertook the arduous
@@ -150,7 +224,6 @@
                         <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
                                 class="fa fa-youtube"></i></a>
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
-
                     </div>
                 </div>
             </div>
@@ -161,9 +234,7 @@
             </div>
         </div>
     </footer>
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
