--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
 
+                </div>
+                <div class="col-12 col-sm align-self-center "><a href="#res"><button
+                            class="btn btn-sm btn-warning">Reserve
+                            Table</button></a>
                 </div>
             </div>
         </div>
@@ -83,16 +87,26 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+            <div class="col col-sm col-md ">
+
+                <div class=media>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center order-sm-last" src="img/buffet.png"
+                        alt="buffet">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing
+                            appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
+                            just
+                            $19.99 per person </p>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col col-sm order-sm-last col-md">
+            <div class="col-12 col-sm-4 col-md-3 order-sm-last col-md">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
@@ -113,6 +127,34 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="card col-8 align-self-center offset-2">
+        <form>
+
+            <h3 class="card-header bg-warning text-white" id="res"> Reserve a Table </h3>
+            <div class="card-body">
+                <label id="noOfGuests"> No of Guests </label>
+                <input type="radio" id="noOfGuests" name="reserve"> 1
+                <input type="radio" id="noOfGuests" name="reserve"> 2
+                <input type="radio" id="noOfGuests" name="reserve"> 3
+                <input type="radio" id="noOfGuests" name="reserve"> 4
+                <input type="radio" id="noOfGuests" name="reserve"> 5
+                <input type="radio" id="noOfGuests" name="reserve"> 6
+                </br>
+
+                <label id="DT">Date and Time</label>
+                <input type="text" placeholder="Date" id="DT">
+                <input type="text" placeholder="Time" id="DT">
+
+
+                </br>
+                <button class=" bg-primary text-white offset-2 mt-2"> Reserve</button>
+            </div>
+        </form>
+    </div>
+
 
     <footer class="footer">
         <div class="container">
