--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 
         <div class="container">
+
+
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
@@ -87,6 +89,7 @@
     </div>
     <header class="jumbotron">
         <div class="container">
+
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
@@ -101,40 +104,94 @@
                     <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
                         title="`Or Call us at  </br><strong>+852 12345678</strong>`" data-placement="bottom"
                         href="#res">Reserve Table</a>
-                    <!--                     
-                    <a href="#res"><button
-                            class="btn btn-sm btn-warning btn-block">Reserve
-                            Table</button></a> -->
+
                 </div>
             </div>
         </div>
     </header>
     <!-- class="col-12 col-sm" -->
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class=" col-12 col-sm-4 order-sm-last col-md-3 ">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm col-md order-sm-first ">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                        class="badge badge-pill badge-default">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                    Italian pizza, topped with Cerignola olives, ripe vine
+                                    cherry tomatoes, Vidalia onion, Guntur chillies and
+                                    Buffalo Paneer.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
+                            <div class="carousel-caption d-none d-md-block">
 
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
-                    <div class="media-body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span
-                                class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                            Italian pizza, topped with Cerignola olives, ripe vine
-                            cherry tomatoes, Vidalia onion, Guntur chillies and
-                            Buffalo Paneer.</p>
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+
+                                <p>Featuring mouthwatering combinations with a choice of five different salads, six
+                                    enticing
+                                    appetizers,
+                                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                                    All for
+                                    just
+                                    $19.99 per person </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences.
+                                </p>
+                            </div>
+                        </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mycarousel" data-slide-to="1"></li>
+                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                        </ol>
                     </div>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
                 </div>
             </div>
         </div>
+        <!-- <div class="row row-content align-items-center">
+            <div class=" col-12 col-sm-4 order-sm-last col-md-3 ">
+                <h3>Our Lipsmacking Culinary Creations</h3>
+            </div>
+            <div class="col col-sm col-md order-sm-first "> -->
 
+        <!-- <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body"> -->
+        <!-- <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span
+                                class="badge badge-pill badge-secondary">$4.99</span></h2> -->
+        <!-- <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.</p> -->
+        <!-- </div>
+                </div> -->
+        <!-- </div>
+        </div> -->
 
+        <!-- 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
+            <div class="col-12 col-sm-4 col-md-3"> -->
+        <!-- <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md ">
 
@@ -152,8 +209,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-
+        </div> -->
+        <!-- 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last col-md">
                 <h3>Meet our Culinary Specialists</h3>
@@ -174,7 +231,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
