--- a/index.html
+++ b/index.html
@@ -87,6 +87,55 @@
             </div>
         </div>
     </div>
+
+    <div id="resform" class="modal fade show" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table Here </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <label id="noOfGuests"> No of Guests </label>
+                        <input type="radio" id="noOfGuests" name="reserve"> 1
+                        <input type="radio" id="noOfGuests" name="reserve"> 2
+                        <input type="radio" id="noOfGuests" name="reserve"> 3
+                        <input type="radio" id="noOfGuests" name="reserve"> 4
+                        <input type="radio" id="noOfGuests" name="reserve"> 5
+                        <input type="radio" id="noOfGuests" name="reserve"> 6
+                        </br>
+
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+
+                            <label>Section
+                                <label class="btn btn-success active">
+                                    <autocomplete="off" checked> Non
+                                        Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <autocomplete="off"> Smoking
+                                </label></label>
+                        </div>
+
+                        <br>
+
+                        <label id="DT">Date and Time</label>
+                        <input type="text" placeholder="Date" id="DT">
+                        <input type="text" placeholder="Time" id="DT">
+
+
+                        </br>
+                        <button class=" bg-primary text-white offset-2 mt-2 "> Cancel </button>
+                        <button class=" bg-primary text-white"> Reserve</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
 
@@ -101,13 +150,14 @@
 
                 </div>
                 <div class="col-12 col-sm align-self-center ">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
-                        title="`Or Call us at  </br><strong>+852 12345678</strong>`" data-placement="bottom"
-                        href="#res">Reserve Table</a>
 
+                    <!-- <a data-toggle="model" data-target="#resform" role="button"
+                        class="btn btn-block nav-link btn-warning">Reserve Table here</a> -->
+                    <a data-toggle="modal" data-target="#resform">
+                        <span class="fa fa-sign-in"></span> Reserve a Table</a>
                 </div>
-            </div>
-        </div>
+
+
     </header>
     <!-- class="col-12 col-sm" -->
     <div class="container">
@@ -168,6 +218,8 @@
                 </div>
             </div>
         </div>
+
+
         <!-- <div class="row row-content align-items-center">
             <div class=" col-12 col-sm-4 order-sm-last col-md-3 ">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -234,7 +286,7 @@
         </div> -->
     </div>
 
-
+    <!-- 
 
     <div class="card col-8 align-self-center offset-2">
         <form>
@@ -259,7 +311,7 @@
                 <button class=" bg-primary text-white offset-2 mt-2"> Reserve</button>
             </div>
         </form>
-    </div>
+    </div> -->
 
 
     <footer class="footer">
@@ -312,11 +364,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
