--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Css/stylesheet.css">
+    <link rel="stylesheet" href="Css/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
 
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <button class="navbar-toggler" type="button" toggle="collapse" target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -40,7 +40,7 @@
                 </ul>
 
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a toggle="modal" id="btnShowModel" target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -54,7 +54,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close clr" dismiss="modal" id="btnhidemodel">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -78,8 +78,8 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
-                                data-dismiss="modal">Cancel</button>
+                            <button type="button" dismiss="modal" id="btnhidemodel"
+                                class="btn btn-secondary btn-sm ml-auto">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
@@ -94,7 +94,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a Table Here </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" dismiss="modal" id="btnhidemodel2">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -107,7 +107,7 @@
                         <input type="radio" id="noOfGuests" name="reserve"> 6
                         </br>
 
-                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <div class="btn-group btn-group-toggle" toggle="buttons">
 
                             <label>Section
                                 <label class="btn btn-success active">
@@ -127,7 +127,7 @@
 
 
                         </br>
-                        <button class=" bg-primary text-white offset-2 mt-2 "> Cancel </button>
+                        <button class=" bg-primary text-white offset-2 mt-2 " id="btnhidemodel"> Cancel </button>
                         <button class=" bg-primary text-white"> Reserve</button>
                     </form>
 
@@ -151,10 +151,10 @@
                 </div>
                 <div class="col-12 col-sm align-self-center ">
 
-                    <!-- <a data-toggle="model" data-target="#resform" role="button"
-                        class="btn btn-block nav-link btn-warning">Reserve Table here</a> -->
-                    <a data-toggle="modal" data-target="#resform">
-                        <span class="fa fa-sign-in"></span> Reserve a Table</a>
+                    <a toggle="modal" target="#resform">
+                        <button class="btn btn-warning" id="btnShowModel2"> <span class="fa fa-sign-in"></span> Reserve
+                            a
+                            Table</a></button>
                 </div>
 
 
@@ -163,7 +163,7 @@
     <div class="container">
         <div class="row row-content">
             <div class="col">
-                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div id="mycarousel" class="carousel slide" ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
@@ -204,15 +204,15 @@
                             </div>
                         </div>
                         <ol class="carousel-indicators">
-                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#mycarousel" data-slide-to="1"></li>
-                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                            <li target="#mycarousel" slide-to="0" class="active"></li>
+                            <li target="#mycarousel" slide-to="1"></li>
+                            <li target="#mycarousel" slide-to="2"></li>
                         </ol>
                     </div>
-                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                     </a>
-                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#mycarousel" role="button" slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
                     <button class="btn btn-danger btn-sm" id="carouselButton">
@@ -224,98 +224,9 @@
         </div>
 
 
-        <!-- <div class="row row-content align-items-center">
-            <div class=" col-12 col-sm-4 order-sm-last col-md-3 ">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm col-md order-sm-first "> -->
-
-        <!-- <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
-                    <div class="media-body"> -->
-        <!-- <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span
-                                class="badge badge-pill badge-secondary">$4.99</span></h2> -->
-        <!-- <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                            Italian pizza, topped with Cerignola olives, ripe vine
-                            cherry tomatoes, Vidalia onion, Guntur chillies and
-                            Buffalo Paneer.</p> -->
-        <!-- </div>
-                </div> -->
-        <!-- </div>
-        </div> -->
-
-        <!-- 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3"> -->
-        <!-- <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm col-md ">
-
-                <div class=media>
-                    <img class="d-flex ml-3 img-thumbnail align-self-center order-sm-last" src="img/buffet.png"
-                        alt="buffet">
-                    <div class="media-body">
-                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-
-                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing
-                            appetizers,
-                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
-                            just
-                            $19.99 per person </p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3 order-sm-last col-md">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
-                        alt="Alberto Somayya">
-                    <div class="media-body">
-                        <h2 class="mt-0">Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
-                            International experience having worked closely with
-                            whos-who in the culinary world, he specializes in
-                            creating mouthwatering Indo-Italian fusion experiences.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </div>
 
-    <!-- 
 
-    <div class="card col-8 align-self-center offset-2">
-        <form>
-
-            <h3 class="card-header bg-warning text-white" id="res"> Reserve a Table </h3>
-            <div class="card-body">
-                <label id="noOfGuests"> No of Guests </label>
-                <input type="radio" id="noOfGuests" name="reserve"> 1
-                <input type="radio" id="noOfGuests" name="reserve"> 2
-                <input type="radio" id="noOfGuests" name="reserve"> 3
-                <input type="radio" id="noOfGuests" name="reserve"> 4
-                <input type="radio" id="noOfGuests" name="reserve"> 5
-                <input type="radio" id="noOfGuests" name="reserve"> 6
-                </br>
-
-                <label id="DT">Date and Time</label>
-                <input type="text" placeholder="Date" id="DT">
-                <input type="text" placeholder="Time" id="DT">
-
-
-                </br>
-                <button class=" bg-primary text-white offset-2 mt-2"> Reserve</button>
-            </div>
-        </form>
-    </div> -->
 
 
     <footer class="footer">
@@ -381,6 +292,28 @@
                 $("#carouselButton").children("span").addClass('fa-pause');
             }
         });
+
+        $(document).ready(function () {
+            $("#btnShowModel ").click(function () {
+                $("#loginModal").modal("show");
+
+            });
+            $("#btnhidemodel").click(function () {
+                $("#loginModal").modal("hide");
+
+            });
+
+            $("#btnShowModel2").click(function () {
+                $("#resform").modal("show");
+
+            });
+            $("#btnhidemodel2").click(function () {
+                $("#resform").modal("hide");
+
+            });
+
+        });
+
     </script>
 
 </body>
