--- a/index.html
+++ b/index.html
@@ -274,8 +274,18 @@
                 <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
+                <script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
+                <script>
+                    var myLandbot = new LandbotPopup({
+                        index: 'https://landbot.io/u/H-342788-R0B9251X119TQRP9/index.html',
+                    });
+                    myLandbot.on('sendto', (data) => {
+                        window.location.href = data;
+                    })
+                </script>
             </div>
         </div>
+
     </footer>
     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
