Updated complete application pkgs version

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 
                         <div class="btn-group btn-group-toggle" toggle="buttons">
 
-                            <label>Section
+                            <!-- <label>Section
                                 <label class="btn btn-success active">
                                     <autocomplete="off" checked> Non
                                         Smoking
                                 </label>
                                 <label class="btn btn-danger">
                                     <autocomplete="off"> Smoking
-                                </label></label>
+                                </label></label> -->
                         </div>
 
                         <br>
